# rx-shortage-radar

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  good_first_issue.md
.github/workflows/: ci.yml  deploy-pages.yml  refresh-data.yml
docs/: data-schema.md  dataset-schema.md  glossary.md  shortages.schema.json  usage-examples.md
project/public-github-launch/: DECISIONS.md  TRACKER.md  VERIFICATION.md
site/: app.js  feed-current.xml  feed-discontinued.xml  feed-resolved.xml  feed.xml  index.html  styles.css
site/data/: shortages.csv  shortages.json
src/rx_shortage_radar/: __init__.py  cli.py  csv_export.py  feeds.py  normalize.py  openfda.py  rxnorm.py
tests/: test_cli.py  test_csv_export.py  test_data_schema_docs.py  test_feeds.py  test_glossary_docs.py  test_normalize.py  test_openfda.py  test_rxnorm.py  test_static_site.py
